// gradle clean build

plugins {
    id 'java'
}

apply plugin : 'eclipse'

repositories {
    mavenCentral()
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

compileJava {
    options.compilerArgs.addAll(['--release', '8'])
}

jar { 
    manifest { 
        attributes  'Automatic-Module-Name': 'id.xfunction'
    }
}

task packageJavadoc(type: Zip) {
    archiveFileName = "xfunction-javadoc.zip"
    destinationDirectory = file("$projectDir/release")
    from file("$projectDir/build/docs")
}

task createRelease(type: Copy) {
    def out = 'release'
    from jar.archiveFile
    into out
}

task cleanRelease(type: Delete) {
    delete "$projectDir/release"
}

assemble.dependsOn createRelease
createRelease.dependsOn javadoc,packageJavadoc
clean.dependsOn cleanRelease
